Updated resume website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Harshal Gajanan Kohad</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
     </section>
 
     <!--Experience Section-->
-    <section id="Experience">
+    <section id="experience">
         <h2>Experience</h2>
         <h2>KKE Wash System, Nagpur | June 2024 - Present</h2>
             <h3>Position : Electrical Engineer - Automation</h3>
